Initial commit: Grid Runners backend implementation with maze game, auth, and real-time features

--- a/Backend/GridRunners.Api/appsettings.Development.json
+++ b/Backend/GridRunners.Api/appsettings.Development.json
@@ -4,5 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AzureStorage": {
+    "AccountName": "gridrunsg",
+    "ContainerName": "dev",
+    "UserImagesPath": "UserImages"
+  },
+  "Auth": {
+    "Issuer": "GridRunners",
+    "Audience": "GridRunnersClient",
+    "ExpirationHours": 24
   }
 }
