--- a/Backend/GridRunners.Api/appsettings.json
+++ b/Backend/GridRunners.Api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth": {
+    "Issuer": "GridRunners",
+    "Audience": "GridRunnersClient",
+    "ExpirationHours": 24,
+    "Secret": "jwt-secret-key"
+  }
 }
