--- a/Backend/GridRunners.Api/GridRunners.Api.csproj
+++ b/Backend/GridRunners.Api/GridRunners.Api.csproj
@@ -34,4 +34,8 @@
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GridRunners.Core\GridRunners.Core.csproj" />
+  </ItemGroup>
+
 </Project>
