--- a/.gitignore
+++ b/.gitignore
@@ -1,63 +1,55 @@
-#cursor
+# Cursor-specific
 .cursor
-# .NET Backend
+
+# OS-specific (Windows)
+Thumbs.db
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+[Dd]esktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+*.lnk
+
+# Other common OS files
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.Spotlight-V100
+.Trashes
+
+# IDE/Editor files (common across projects)
+.idea/
+*.swp
+*.swo
+*~
 .vs/
-bin/
-obj/
-*.user
-*.userosscache
-*.suo
-*.userprefs
-[Dd]ebug/
-[Rr]elease/
-x64/
-x86/
-[Aa][Rr][Mm]/
-[Aa][Rr][Mm]64/
-bld/
-[Bb]in/
-[Oo]bj/
-[Ll]og/
-[Ll]ogs/
-
-# Frontend (React)
-node_modules/
-/.pnp
-.pnp.js
-/build
-/dist
-/coverage
-.next/
-out/
-
-# Environment Files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env*.local
-
-# IDE and Editor Files
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-*.code-workspace
-.idea/
-*.swp
-*.swo
+*.sublime-workspace
+*.sublime-project
 
-# System Files
-.DS_Store
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*~
+
+# Logs
+logs/
+*.log
+
+# Credentials and secrets (generic)
+*.key
 *.pem
-
-# Logs and Debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.vercel
-
-# Testing
-/coverage
+*.p12
+*.pfx
