refactor(config): restructure auth and storage configuration into bind/runtime pattern

--- a/Backend/GridRunners.Api/appsettings.Production.json
+++ b/Backend/GridRunners.Api/appsettings.Production.json
@@ -10,5 +10,12 @@
     "AccountName": "gridrunnersdevstorage",
     "ContainerName": "userimages",
     "UserImagesPath": ""
+  },
+  "Cors": {
+    "AllowedOrigins": [
+      "https://gridrunners.azurewebsites.net",
+      "https://gridrunners-frontend.azurewebsites.net"
+    ],
+    "AllowCredentials": true
   }
 }
