feat(openai): add maze generation using OpenAI API

--- a/Backend/GridRunners.SignalR/appsettings.json
+++ b/Backend/GridRunners.SignalR/appsettings.json
@@ -1,10 +1,4 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "AllowedHosts": "*",
   "KeyVault": {
     "Url": "https://gridrunners-dev-kv-core.vault.azure.net/"
@@ -14,5 +8,13 @@
     "Audience": "GridRunnersClient",
     "SecretKeyName": "jwt-secret-key",
     "ExpirationHours": 24
+  },
+  "OpenAI": {
+    "Enabled": true,
+    "ModelIdKeyName": "open-ai-mdl-id",
+    "ApiKeyName": "open-ai-api-key",
+    "OrganizationIdKeyName": "open-ai-orga-id",
+    "ProjectIdKeyName": "open-ai-proj-id",
+    "EndpointUrlKeyName": "open-ai-endpoint-url"
   }
 }
