feat(pre-deploy)

--- a/Backend/GridRunners.SignalR/appsettings.Production.json
+++ b/Backend/GridRunners.SignalR/appsettings.Production.json
@@ -6,10 +6,10 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:gridrunners-prod-sql-server.database.windows.net,1433;Initial Catalog=gridrunners-prod-sql-db;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default;"
+    "DefaultConnection": "Server=tcp:gridrunnerssqlserverdev.database.windows.net,1433;Initial Catalog=gridrunnerssqldbdev;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default;"
   },
   "KeyVault": {
-    "Url": "https://gridrunners-prod-kv-core.vault.azure.net/"
+    "Url": "https://kv-gridrunners-dev.vault.azure.net/"
   },
   "Cors": {
     "AllowedOrigins": [
