--- a/Backend/GridRunners.SignalR/appsettings.json
+++ b/Backend/GridRunners.SignalR/appsettings.json
@@ -1,13 +1,13 @@
 {
   "AllowedHosts": "*",
   "KeyVault": {
-    "Url": "https://gridrunners-dev-kv-core.vault.azure.net/"
+    "Url": "https://kv-gridrunners-dev.vault.azure.net/"
   },
   "Authentication": {
     "Issuer": "GridRunners",
     "Audience": "GridRunnersClient",
     "SecretKeyName": "jwt-secret-key",
-    "ExpirationHours": 24
+    "ExpirationHours": 240
   },
   "OpenAI": {
     "Enabled": true,
