--- a/Backend/GridRunners.Api/appsettings.Production.json
+++ b/Backend/GridRunners.Api/appsettings.Production.json
@@ -1,13 +1,13 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:gridrunners-dev-sql-server.database.windows.net,1433;Initial Catalog=gridrunners-dev-sql-db;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default;"
+    "DefaultConnection": "Server=tcp:gridrunnerssqlserverdev.database.windows.net,1433;Initial Catalog=gridrunnerssqldbdev;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default;"
   },
   "KeyVault": {
-    "Url": "https://gridrunners-dev-kv-core.vault.azure.net/"
+    "Url": "https://kv-gridrunners-dev.vault.azure.net/"
   },
   "AzureStorage": {
-    "AccountName": "gridrunnersdevstorage",
+    "AccountName": "stgridrunnersdev",
     "ContainerName": "userimages",
     "UserImagesPath": ""
   },
